# cookiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.__project_slug}}/: pyproject.toml
{{cookiecutter.__project_slug}}/.github/workflows/: publish.yml  tests.yml
{{cookiecutter.project_slug}}/: pyproject.toml
