[tool.poetry]
name = "{{ cookiecutter.__project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description.replace('\"', '\\\"') }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }}"]
license = "MIT"
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version}}"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
isort = "^5.12.0"
nox = "^2022.11.21"
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"


[tool.black]
line-length = {{ cookiecutter._line_length }}
target-version = ['py{{ cookiecutter.python_version|replace(".", "") }}']

[tool.isort]
# Configure isort to work without access to site-packages
known_first_party = ["{{ cookiecutter.__package_name }}", "tests"]

# Settings for Black compatibility
profile = "black"
line_length = {{ cookiecutter._line_length }}


[tool.mypy]
check_untyped_defs = true
python_version = "{{ cookiecutter.python_version}}"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "-ra -q --cov={{ cookiecutter.__package_name }} --cov-report=xml --cov-report=term-missing"
testpaths = [
    "tests",
]


[tool.ruff]
# Avoid automatic removal of unused variables
unfixable = ['F841'] # unused-variable