[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description.replace('\"', '\\\"') }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }}"]
license = "MIT"
readme = "README.md"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
isort = "^5.12.0"
nox = "^2022.11.21"
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
# Configure isort to work without access to site-packages
known_first_party = ["mdformat_wikilink", "tests"]

# Settings for Black compatibility
profile = "black"

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
xfail_strict = true
addopts = "-ra -q --cov={{ cookiecutter.project_slug }} --cov-report=xml --cov-report=term-missing"
testpaths = [
    "tests",
]
